--- a/index.html
+++ b/index.html
@@ -7,17 +7,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div style="display: none;">
-            <img src="images/Clear.png" />
-            <img src="images/Clouds.png" />
-            <img src="images/Drizzle.png" />
-            <img src="images/humidity.png" />
-            <img src="images/Mist.png" />
-            <img src="images/rain.png" />
-            <img src="images/snow.png" />
-            <img src="images/wind.png" />
-            <img src="images/search.png" />
-        </div>
         <style>
             .humidity, .wind-speed {
                 margin-bottom: 0 !important;
@@ -90,7 +79,7 @@
                         $(".wind-speed").empty().append(data.wind.speed + 'km/hr');
                         $(".city").empty().append(data.name);
 
-                        var weatherIcon = data.weather[0].main.toLowerCase() +'.png';
+                        var weatherIcon = data.weather[0] +'.png';
                         $('.weather_icon').attr('src','images/'+ weatherIcon);
                         $('.weather_icon').attr('alt', weatherIcon);
                     }                    
