--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </div>
                 <i class="warning" style="color: red;"></i>
                 <div class="weather">
-                    <img class="weather_icon" src="images/snow.png" alt="snow"/>
+                    <img class="weather_icon" src="images/Snow.png" alt="snow"/>
                     <h2 class="temp">-1°C</h1>
                     <h3 class="city">New York</h2>
                     <div class="details row" style="margin-top: 110px;">
                         <div class="col row" style="text-align: left; align-items: center;">
                             <div class="mb-3" style="width: 60px;">
-                                <img src="images/humidity.png" alt="humidity" width="40px">
+                                <img src="images/Humidity.png" alt="humidity" width="40px">
                             </div>
                             <div class="col">
                                 <p class="humidity">50%</p>
@@ -50,7 +50,7 @@
                                 <p>Wind Speed</p>
                             </div>
                             <div class="mb-3" style="width: 60px;">
-                                <img src="images/wind.png" alt="wind Speed" width="40px">
+                                <img src="images/Wind.png" alt="wind Speed" width="40px">
                             </div>
                         </div>
                     </div>
