Update background color index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
                 margin-bottom: 0 !important;
                 font-weight: 600;
             }
+            body{
+                background: -webkit-linear-gradient(to right, #434343, #000000);
+                background: linear-gradient(to right, #434343, #000000);
+            }
         </style>
         
         <div class="container text-center">
